--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
-*{
+*{  
+    border: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,5 +7,4 @@
 
 body, #root{
     height: 100%;
-    background-color: #121214;
 }
